create Ad Domain (step 1)
