# storage/api-docs/api-docs.json
@@ -5,6 +5,63 @@
         "version": "1.0.0"
     },
     "paths": {
+        "/api/v1/ads/check-license": {
+            "post": {
+                "tags": [
+                    "Ads"
+                ],
+                "operationId": "259731a316c73f00b88c18c4a1bdfe2c",
+                "requestBody": {
+                    "$ref": "#/components/requestBodies/CheckAdLicenseRequest"
+                },
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "string"
+                                        },
+                                        "message": {
+                                            "type": "string"
+                                        },
+                                        "data": {
+                                            "$ref": "#/components/schemas/AdPlatformViewModel"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Validation error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "string"
+                                        },
+                                        "message": {
+                                            "type": "string"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            }
+        },
         "/api/v1/auth/complete-profile": {
             "post": {
                 "tags": [
@@ -161,6 +218,39 @@
     },
     "components": {
         "schemas": {
+            "AdPlatformViewModel": {
+                "title": "AdViewModel",
+                "description": "Ad From Platform View Model",
+                "required": [
+                    "license_number"
+                ],
+                "properties": {
+                    "license_number": {
+                        "type": "string"
+                    },
+                    "region_name": {
+                        "type": "string"
+                    }
+                },
+                "type": "object"
+            },
+            "AdViewModel": {
+                "title": "AdViewModel",
+                "description": "Ad From Platform View Model",
+                "required": [
+                    "id",
+                    "license_number"
+                ],
+                "properties": {
+                    "id": {
+                        "type": "integer"
+                    },
+                    "license_number": {
+                        "type": "string"
+                    }
+                },
+                "type": "object"
+            },
             "UserViewModel": {
                 "title": "UserViewModel",
                 "description": "User View Model",
@@ -390,6 +480,28 @@
             }
         },
         "requestBodies": {
+            "CheckAdLicenseRequest": {
+                "required": true,
+                "content": {
+                    "application/json": {
+                        "schema": {
+                            "required": [
+                                "license_number"
+                            ],
+                            "properties": {
+                                "license_number": {
+                                    "description": "The license number must be exactly 10 digits long and must begin with 72.",
+                                    "type": "string",
+                                    "maxLength": 10,
+                                    "minLength": 10,
+                                    "pattern": "^72\\d{8}$"
+                                }
+                            },
+                            "type": "object"
+                        }
+                    }
+                }
+            },
             "CompleteProfileRequest": {
                 "required": true,
                 "content": {
@@ -475,6 +587,10 @@
         }
     },
     "tags": [
+        {
+            "name": "Ads",
+            "description": "Ads"
+        },
         {
             "name": "Auth",
             "description": "Auth"
